<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CPUFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CPUInfo_txtView"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Integer Calculation"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/PrimeResult_txtField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PrimeResult"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Matrix Multiplication"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/matrixMultip_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MatrixMultip"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/matrixInverse_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MatrixInverse"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/matrixEqua_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SolveEquations"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/matrixRRF_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RRF"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/matrixComplex_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ComplexEquations"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Floating Point Calculation"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/DegToRad_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DegToRad"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/RadToDeg_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RadToDeg"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/NthRoot_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NThRoot"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textview15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="QuickSort"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/quickSort_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/QuickSort"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textview10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Dijkstra"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/Dijkstra_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Dijkstra"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="FFT"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/FFT_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FFT"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="HTML Parser"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/htmlParser_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HTMLParser"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="AES"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/AES_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AES"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="QR Code Scan"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/QRCode_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/QRCode"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Canny Edge Detection"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/Canny_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Canny"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Gaussian Blur"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/Gaussian_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/GaussianBlur"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" />

            <Button
                android:id="@+id/startCPUBench_btn"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CPUBenchmark_Btn"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/displayDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/linpn"
                android:textStyle="bold"
                android:typeface="monospace"
                android:visibility="visible"></TextView>

            <Button
                android:id="@+id/startButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Run_JNI"
                android:visibility="visible"></Button>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/Linpack_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Linpack_description"
                android:textColor="@color/TextColor"
                android:textSize="12sp"
                android:textStyle="normal"
                android:typeface="monospace"
                android:visibility="visible" />

            <TextView
                android:id="@+id/displayDetails2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dhryn"
                android:textStyle="bold"
                android:typeface="monospace"
                android:visibility="visible"></TextView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>