<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".IOFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/memtest"
                android:textStyle="bold"
                android:typeface="monospace"
                android:visibility="visible"></TextView>

            <Button
                android:id="@+id/startButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Run_JNI"
                android:visibility="visible"></Button>

            <Space
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/SQLite_txtView"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/SQLite_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Performans..."
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/TextColor"
                android:visibility="visible" />

            <Button
                android:id="@+id/SQLite_Bench_btn"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SQLite_Benchmark"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>