<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GPUFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ogl"
                android:textStyle="bold"
                android:typeface="monospace"></TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/Opengl_desc_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/JavaOpenGL_description"
                android:textColor="@color/TextColor"
                android:textSize="12sp"
                android:textStyle="normal"
                android:typeface="monospace" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@android:color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/displayDetails2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ogl"
                android:textStyle="bold"
                android:typeface="monospace"></TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/JavaDraw_desc_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/JavaDraw_description"
                android:textColor="@color/TextColor"
                android:textSize="12sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/startButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Run_JNI"></Button>

        </LinearLayout>
    </ScrollView>

</FrameLayout>